--- a/frontend/src/components/LoginForm/LoginForm.css
+++ b/frontend/src/components/LoginForm/LoginForm.css
@@ -12,6 +12,7 @@
   margin-bottom: 20px;
   width: 100px;
   object-fit: contain;
+  cursor: pointer;
 }
 .login-form {
   display: flex;
@@ -52,24 +53,36 @@
   line-height: 1.5;
 }
 
-.signup-button {
+.signin-button {
   width: 100%;
-  background-color: rgb(240, 193, 75);
   height: 31px;
   border: 1px solid;
   border-radius: 3px;
   border-color: rgb(168, 135, 52) rgb(156, 126, 49) rgb(132, 106, 41);
   margin-top: 10px;
+  background: linear-gradient(to bottom, rgb(250, 212, 122), rgb(240, 193, 75));
+  background-image: linear-gradient(rgb(250, 213, 126), rgb(240, 193, 75));
+  cursor: pointer;
+}
+
+.signin-button:hover {
+  background-image: linear-gradient(rgb(250, 213, 126), rgb(211, 167, 55));
 }
 
 .demo-button {
   width: 100%;
-  background-color: rgb(240, 193, 75);
   height: 31px;
   border: 1px solid;
   border-radius: 3px;
   border-color: rgb(168, 135, 52) rgb(156, 126, 49) rgb(132, 106, 41);
   margin-top: 10px;
+  background: linear-gradient(to bottom, rgb(250, 212, 122), rgb(240, 193, 75));
+  background-image: linear-gradient(rgb(250, 213, 126), rgb(240, 193, 75));
+  cursor: pointer;
+}
+
+.demo-button:hover {
+  background-image: linear-gradient(rgb(250, 213, 126), rgb(211, 167, 55));
 }
 
 .create-account-button {
@@ -79,4 +92,69 @@
   margin-top: 10px;
   border-color: rgb(169, 169, 169);
   border-radius: 3px;
+  background: linear-gradient(
+    to bottom,
+    rgb(223, 222, 222),
+    rgb(170, 168, 168)
+  );
+  background-image: linear-gradient(rgb(223, 222, 222), rgb(245, 245, 245));
+  cursor: pointer;
+  transition-duration: 0.4s;
+}
+.create-account-button:hover {
+  background-image: linear-gradient(rgb(223, 222, 222), rgb(205, 205, 205));
+}
+
+.break-container {
+  display: flex;
+  align-items: center;
+  width: auto;
+  flex-direction: column;
+}
+
+.errors-container {
+  display: flex;
+  border: 1px solid #ddd;
+  position: relative;
+  box-shadow: 0 0 0 5px #fcf4f4 inset;
+
+  border-radius: 4px;
+  box-sizing: border-box;
+  margin-bottom: 14px;
+  border-color: #c40000;
+}
+.errors-message-box {
+  z-index: -1;
+  padding: 14px 18px 14px 10px;
+  background-color: white;
+  border-radius: 4px;
+}
+
+.errors-message-box > h4 {
+  color: #c40000;
+  font-weight: 400;
+  font-size: 17px;
+  line-height: 1.3;
+  padding-bottom: 4px;
+  display: block;
+}
+
+.errors-message-box > svg,
+.svgcontainer > svg {
+  color: #c40000;
+  height: 30px;
+  width: 30px;
+  display: flex;
+  background-position: -248px -35px;
+  display: inline-block;
+  vertical-align: top;
+  background-size: 400px 700px;
+  left: 18px;
+  top: 11px;
+}
+
+.error-messages li {
+  list-style: none;
+  word-wrap: break-word;
+  font-size: 13px;
 }
