--- a/frontend/src/components/LoginForm/LoginForm.css
+++ b/frontend/src/components/LoginForm/LoginForm.css
@@ -100,16 +100,26 @@
   background-image: linear-gradient(rgb(223, 222, 222), rgb(245, 245, 245));
   cursor: pointer;
   transition-duration: 0.4s;
+  width: 350px;
 }
 .create-account-button:hover {
   background-image: linear-gradient(rgb(223, 222, 222), rgb(205, 205, 205));
 }
 
-.break-container {
-  display: flex;
-  align-items: center;
-  width: auto;
-  flex-direction: column;
+.break-line {
+  border-bottom: 1px solid rgb(206, 205, 205);
+  width: 350px;
+  margin-top: 35px;
+}
+
+.break-container > h5 {
+  text-align: center;
+  margin-top: -10px;
+  margin-left: 115px;
+  background-color: white;
+  color: rgb(166, 166, 166);
+  width: 120px;
+  font-size: 13px;
 }
 
 .errors-container {
