--- a/frontend/src/components/LoginForm/LoginForm.css
+++ b/frontend/src/components/LoginForm/LoginForm.css
@@ -131,7 +131,7 @@
   border-radius: 4px;
   box-sizing: border-box;
   margin-bottom: 14px;
-  border-color: #c40000;
+  border-color: rgb(196, 0, 0);
 }
 .errors-message-box {
   z-index: -1;
@@ -141,7 +141,7 @@
 }
 
 .errors-message-box > h4 {
-  color: #c40000;
+  color: rgb(196, 0, 0);
   font-weight: 400;
   font-size: 17px;
   line-height: 1.3;
@@ -151,7 +151,7 @@
 
 .errors-message-box > svg,
 .svgcontainer > svg {
-  color: #c40000;
+  color: rgb(196, 0, 0);
   height: 30px;
   width: 30px;
   display: flex;
