--- a/frontend/src/components/SignupForm/SignupForm.css
+++ b/frontend/src/components/SignupForm/SignupForm.css
@@ -90,3 +90,37 @@
   font-size: 12px;
   font-weight: 100;
 }
+
+.divider-container {
+  width: 300px;
+  height: 40px;
+  background: linear-gradient(
+    to bottom,
+    rgba(0, 0, 0, 0.14),
+    rgba(0, 0, 0, 0.03) 3px,
+    transparent
+  );
+  z-index: 0;
+  margin-top: 30px;
+  margin-bottom: -18px;
+}
+.divider-container::after {
+  content: "";
+  width: 100%;
+  height: 25px;
+  display: block;
+  background: linear-gradient(to right, #fff, rgba(255, 255, 255, 0), #fff);
+}
+
+.divider-links {
+  margin-top: 10px;
+}
+
+.divider-links > h5 {
+  font-size: 13px;
+}
+
+.divider-links > h5 > a {
+  text-decoration: none;
+  color: #0066c0;
+}
