Finished product and create cart

--- a/frontend/src/components/Splash/Splash.css
+++ b/frontend/src/components/Splash/Splash.css
@@ -1,6 +1,29 @@
-.splash-background {
+.splash {
+  display: flex;
+  justify-content: center;
+  margin-left: auto;
+  margin-right: auto;
+  width: 100%;
+  background-color: rgb(234, 237, 237);
+}
+
+.splash-layout {
+  display: flex;
+  max-width: 80%;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.splash-container {
+  max-width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.splash-container .splash-background {
   width: 100%;
   margin-bottom: -150px;
   mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
-  z-index: -1;
+  /* z-index: -1; */
 }
