--- a/frontend/src/components/LoginForm/LoginForm.css
+++ b/frontend/src/components/LoginForm/LoginForm.css
@@ -3,6 +3,7 @@
   flex-direction: column;
   align-items: center;
   height: 100vh;
+  background-color: white;
 }
 
 .login-logo {
@@ -127,14 +128,13 @@
   border: 1px solid #ddd;
   position: relative;
   box-shadow: 0 0 0 5px #fcf4f4 inset;
-
+  width: 350px;
   border-radius: 4px;
   box-sizing: border-box;
   margin-bottom: 14px;
   border-color: rgb(196, 0, 0);
 }
 .errors-message-box {
-  z-index: -1;
   padding: 14px 18px 14px 10px;
   background-color: white;
   border-radius: 4px;
