--- a/frontend/src/components/Navbar/Navbar.css
+++ b/frontend/src/components/Navbar/Navbar.css
@@ -3,7 +3,7 @@
   display: flex;
   align-items: center;
   background-color: rgb(19, 25, 33);
-  position: sticky;
+  /* position: sticky; */
   top: 0;
   z-index: 100;
 }
@@ -40,6 +40,9 @@
   height: 100%;
   border-radius: 4px 0px 0px 4px;
   align-items: center;
+  width: 40px;
+  border: 2px solid silver;
+  background-color: lightgray;
 }
 
 .search-bar {
