--- a/frontend/src/components/Navbar/Navbar.css
+++ b/frontend/src/components/Navbar/Navbar.css
@@ -11,7 +11,7 @@
 .logo {
   width: 100px;
   object-fit: contain;
-  margin: 0 15px 0px 0px;
+  margin: 15px 15px 0px 0px;
   /* margin-top: 18px; */
   border: 1px solid transparent;
   padding: 3px;
