finished products and cart

--- a/frontend/src/components/CategoryNav/CategoryNav.css
+++ b/frontend/src/components/CategoryNav/CategoryNav.css
@@ -2,7 +2,7 @@
   height: 38px;
   display: flex;
   align-items: center;
-  background-color: #1b1f1f;
+  background-color: #232f3e;
   /* position: sticky; */
   justify-content: space-between;
   z-index: 100;
