--- a/frontend/src/components/Navbar/Navbar.css
+++ b/frontend/src/components/Navbar/Navbar.css
@@ -2,7 +2,7 @@
   height: 60px;
   display: flex;
   align-items: center;
-  background-color: rgb(19, 25, 33);
+  background-color: #131921;
   /* position: sticky; */
   top: 0;
   z-index: 100;
@@ -61,6 +61,12 @@
   /* border-radius: 4px 0px 0px 4px; */
 }
 
+.search-bar-input:focus {
+  outline: none !important;
+  border-color: (240, 193, 75);
+  box-shadow: 0 0 0 2px rgb(250, 153, 17);
+}
+
 .search-bar-button-container {
   display: flex;
   /* flex: 1 1 auto; */
@@ -73,7 +79,7 @@
 .search-bar-button {
   /* display: flex; */
   /* padding: 5px; */
-  border: 2px solid rgb(205, 144, 66);
+  border: 3px solid rgb(205, 144, 66);
   height: 100%;
   background-color: rgb(205, 144, 66);
   border-radius: 0px 4px 4px 0px;
@@ -120,8 +126,8 @@
   color: rgb(255, 255, 255);
 }
 
-.nav-shopping-cart-counter {
-  color: #f08804;
-  margin-left: 10px;
-  margin-right: 10px;
+.shopping-cart-icon {
+  width: 60px;
+  height: 42px;
+  object-fit: contain;
 }
