--- a/frontend/src/components/ProductIndex/ProductIndex.css
+++ b/frontend/src/components/ProductIndex/ProductIndex.css
@@ -1,4 +1,4 @@
-.splash {
+.product-index {
   display: flex;
   justify-content: center;
   margin-left: auto;
@@ -7,23 +7,20 @@
   background-color: rgb(234, 237, 237);
 }
 
-.splash-layout {
+.product-index-layout {
   display: flex;
   max-width: 80%;
   flex-wrap: wrap;
   justify-content: center;
 }
 
-.splash-container {
+.product-index-container {
   max-width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-.splash-container .splash-background {
+.product-index-container {
   width: 100%;
-  margin-bottom: -150px;
-  mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
-  /* z-index: -1; */
 }
