--- a/frontend/src/components/Footer/Footer.css
+++ b/frontend/src/components/Footer/Footer.css
@@ -3,7 +3,7 @@ footer {
   padding: 50px 0;
 }
 
-.container {
+.footer-container {
   max-width: 1170px;
   margin: 0 auto;
   display: flex;
@@ -13,7 +13,7 @@ footer {
   align-items: center;
 }
 
-.row {
+.footer-row {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
@@ -25,19 +25,19 @@ footer {
   padding-right: 20px;
 }
 
-h5 {
+.footer-h5 {
   font-size: 18px;
   font-weight: 600;
   margin-bottom: 20px;
   color: white;
 }
 
-ul {
+.footer-ul {
   list-style: none;
   padding: 0;
 }
 
-a {
+.footer-a {
   color: white;
   font-size: 16px;
   text-decoration: none;
