--- a/frontend/src/components/HomePage/HomePage.css
+++ b/frontend/src/components/HomePage/HomePage.css
@@ -18,14 +18,15 @@
   display: flex;
   flex-direction: column;
   background-color: white;
-  justify-content: center;
+  justify-content: space-evenly;
   margin: 10px;
   padding: 20px;
   /* width: 100%; */
-  max-height: 400px;
+  min-height: 350px;
   min-width: 100px;
   z-index: 1;
-  text-align: left;
+  text-align: center;
+  align-items: center;
 }
 
 .homepage-item > h1 {
@@ -42,9 +43,9 @@
 }
 
 .homepage-item-img {
-  max-height: 350px;
-  width: 200px;
-  margin: 15px;
+  max-height: 300px;
+  width: 250px;
+  padding: 10px;
   object-fit: contain;
 }
 
