--- a/frontend/src/components/Cart/Cart.css
+++ b/frontend/src/components/Cart/Cart.css
@@ -64,15 +64,13 @@
 }
 
 .cart-item-quantity {
-  font-size: 13px;
-  align-items: center;
-  width: 50px;
-  height: 15px;
-  padding: 5px;
-  border-color: rgb(169, 169, 169);
-  border-radius: 7px;
-  background: rgb(223, 222, 222);
-  margin-right: 5px;
+  border: 1px solid rgb(122, 111, 111);
+  display: flex;
+  border-radius: 4px;
+  margin-right: 10px;
+  padding: 0 5px;
+  background-color: #f0f0f0;
+  width: 53px;
 }
 
 .cart-item-delete-container {
