--- a/frontend/src/components/ProductShow/ProductShow.css
+++ b/frontend/src/components/ProductShow/ProductShow.css
@@ -71,7 +71,7 @@
   border: 1px solid rgb(122, 111, 111);
   display: flex;
   border-radius: 4px;
-  margin-bottom: 10px;
+  margin-right: 6px;
   padding: 0 5px;
   background-color: #f0f0f0;
   width: 53px;
