--- a/frontend/src/components/CheckOutPage/CheckOutPage.css
+++ b/frontend/src/components/CheckOutPage/CheckOutPage.css
@@ -18,6 +18,7 @@
   border-radius: 8px;
   flex-direction: column;
   position: absolute;
+  padding: 10px;
 }
 
 .checkout-icons {
@@ -30,6 +31,8 @@
   padding: 10px;
   font-size: 20px;
   font-weight: 500;
+  display: flex;
+  align-items: center;
 }
 
 .checkout-icons a {
