--- a/frontend/src/components/Cart/Cart.css
+++ b/frontend/src/components/Cart/Cart.css
@@ -153,6 +153,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
 }
 
 .check-out-items-subtotal-text {
