added styling for customer reviews and write a review section

--- a/frontend/src/components/ProductShow/ProductShow.css
+++ b/frontend/src/components/ProductShow/ProductShow.css
@@ -291,11 +291,11 @@ select:focus {
 }
 
 .stars {
-  color: #fcd200;
+  color: #ff8f00;
 }
 
 .product-rating {
-  color: #fcd200;
+  color: #ff8f00;
 }
 
 .product-show-information {
