--- a/frontend/src/components/ReviewsIndex/ReviewsIndex.css
+++ b/frontend/src/components/ReviewsIndex/ReviewsIndex.css
@@ -1,3 +1,73 @@
-.reviews {
+.reviews-section {
+  margin-top: 15px;
+  margin-left: 75px;
+  margin-right: 340px;
+}
+.reviews-container {
   display: flex;
+}
+
+.reviews-left-container {
+  margin-top: 30px;
+  white-space: nowrap;
+}
+
+.reviews-left-container > h3 {
+  font-size: 24px;
+}
+
+.reviews-rating {
+  display: flex;
+  font-size: 18px;
+  margin-left: 3px;
+  margin-top: 3px;
+  margin-bottom: 3px;
+}
+
+.reviews-rating-number {
+  margin-left: 5px;
+}
+
+.reviews-global-ratings {
+  font-size: 14px;
+  margin-left: 3px;
+  margin-top: 12px;
+  margin-bottom: 5px;
+}
+
+.reviews-bottom-section {
+  margin-top: 20px;
+}
+
+.reviews-bottom-section > h4 {
+  font-size: 18px;
+  font-weight: bold;
+}
+
+.reviews-share-thoughts {
+  font-size: 14px;
+  margin-top: 15px;
+  margin-bottom: 15px;
+}
+
+.create-review-button {
+  width: 100%;
+  height: 31px;
+  border: 1px solid;
+  margin-top: 10px;
+  margin-bottom: 23px;
+  border-color: rgb(169, 169, 169);
+  border-radius: 8px;
+  background: linear-gradient(
+    to bottom,
+    rgb(255, 254, 254),
+    rgb(238, 236, 236)
+  );
+  background-image: linear-gradient(rgb(223, 222, 222), rgb(245, 245, 245));
+  cursor: pointer;
+  transition-duration: 0.4s;
+  width: 350px;
+}
+.create-review-button:hover {
+  background-image: linear-gradient(rgb(223, 222, 222), rgb(205, 205, 205));
 }
