--- a/frontend/src/components/ProductShow/ProductShow.css
+++ b/frontend/src/components/ProductShow/ProductShow.css
@@ -302,6 +302,19 @@ select:focus {
   display: flex;
 }
 
-.show-product-rating {
+.show-product-rating-container {
   display: flex;
+  align-items: center;
+}
+
+.show-product-ratings {
+  font-size: 14px;
+  color: #007185;
+  margin-left: 10px;
+}
+
+.product-review-count {
+  font-size: 12px;
+  color: #007185;
+  margin-left: 3px;
 }
